--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Mich</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
- <!-- inicio de prototipado en html -->
+  <!-- inicio de prototipado en html -->
 </body>
 
 </html>
